--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "dev": "deno run -A --watch ./src/server.ts"
   },
   "imports": {
+    "@es-toolkit/es-toolkit": "jsr:@es-toolkit/es-toolkit@^1.31.0",
     "@std/assert": "jsr:@std/assert@1"
   }
 }
