--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
   "tasks": {
-    "dev": "deno run -A --watch ./src/server.ts"
+    "dev": "deno run -A --watch ./src/server.ts",
+    "test": "deno test -A",
+    "build": "deno compile -A --include ./data -o ./dist/gewmts.exe ./src/server.ts "
   },
   "imports": {
-    "@es-toolkit/es-toolkit": "jsr:@es-toolkit/es-toolkit@^1.31.0",
     "@std/assert": "jsr:@std/assert@1",
     "protobufjs": "npm:protobufjs@^7.4.0"
   }
