--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run -A --watch ./src/server.ts",
+    "dev": "deno run -A --unstable-kv --watch ./src/server.ts",
     "test": "deno test -A",
-    "build": "deno compile -A --include ./data -o ./dist/gewmts.exe ./src/server.ts"
+    "build": "deno compile -A --unstable-kv --include ./data -o ./dist/gewmts.exe ./src/server.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
