--- a/deno.json
+++ b/deno.json
@@ -7,5 +7,11 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "protobufjs": "npm:protobufjs@^7.4.0"
+  },
+  "deploy": {
+    "project": "418f4fc8-3ebb-4921-9e72-d70591d973cc",
+    "exclude": ["**/node_modules", "**/.git", "**/playground", "**/docs"],
+    "include": [],
+    "entrypoint": "src/server.ts"
   }
 }
