--- a/deno.json
+++ b/deno.json
@@ -1,18 +1,14 @@
 {
   "tasks": {
-    "dev": "deno run -A --unstable-kv --unstable-cron --watch ./src/server.ts",
+    "dev": "deno run -A --unstable-kv --watch ./src/server/index.ts",
     "test": "deno test -A --unstable-kv",
-    "build": "deno compile -A --unstable-kv --include ./data -o ./dist/gewmts.exe ./src/server.ts"
+    "build": "deno compile --unstable-kv --allow-all --include ./data -o ./dist/gewmts.exe ./src/server/index.ts"
   },
   "imports": {
+    "@liuxspro/libs": "jsr:@liuxspro/libs@^0.1.15",
+    "hono": "jsr:@hono/hono@^4.11.7",
     "@liuxspro/capgen": "jsr:@liuxspro/capgen@^0.2.1",
     "@std/assert": "jsr:@std/assert@1",
     "protobufjs": "npm:protobufjs@^7.4.0"
-  },
-  "deploy": {
-    "project": "418f4fc8-3ebb-4921-9e72-d70591d973cc",
-    "exclude": ["**/node_modules", "**/.git", "**/playground", "**/docs"],
-    "include": [],
-    "entrypoint": "src/server.ts"
   }
 }
