--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,9 @@
     "build": "deno compile --unstable-kv --allow-all --include ./data -o ./dist/gewmts.exe ./src/server/index.ts"
   },
   "imports": {
+    "@deno-library/compress": "jsr:@deno-library/compress@^0.5.6",
     "@liuxspro/libs": "jsr:@liuxspro/libs@^0.1.15",
+    "@std/path": "jsr:@std/path@^1.1.4",
     "hono": "jsr:@hono/hono@^4.11.7",
     "@liuxspro/capgen": "jsr:@liuxspro/capgen@^0.2.1",
     "@std/assert": "jsr:@std/assert@1",
